# gandiva_rust_udf_macros

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
ci/scripts/: build.sh
gandiva_rust_udf_build/: Cargo.toml
gandiva_rust_udf_build/src/: lib.rs
gandiva_rust_udf_build/tests/: udf_registry_generator_test.rs
gandiva_rust_udf_build/tests/data/: Cargo.toml
gandiva_rust_udf_build/tests/data/foo_func/: Cargo.toml
gandiva_rust_udf_build/tests/data/foo_func/src/: lib.rs
gandiva_rust_udf_build/tests/data/src/: lib.rs
gandiva_rust_udf_common/: Cargo.toml
gandiva_rust_udf_common/src/: lib.rs
gandiva_rust_udf_macro/: CHANGELOG.md  Cargo.toml
gandiva_rust_udf_macro/src/: attr_parser.rs  lib.rs  quote_helper.rs  type_mapping.rs  udf_macro_test.rs
gandiva_rust_udf_shared/: Cargo.toml
gandiva_rust_udf_shared/src/: lib.rs  shared_api_test.rs  type_mapping.rs  udf_registry_generator.rs
gandiva_rust_udf_shared/tests/: shared_api_test.rs  udf_registry_generator_test.rs
gandiva_rust_udf_shared/tests/data/bar_func/: Cargo.toml
gandiva_rust_udf_shared/tests/data/bar_func/src/: lib.rs
gandiva_rust_udf_type/: Cargo.toml
gandiva_rust_udf_type/src/: lib.rs
src/: lib.rs  udf_macro_test.rs
