[package]
name = "gandiva_rust_udf_build"
version = "0.1.0"
edition = "2021"
authors = ["yanhuangdata"]
description = "A basic shared library for gandiva rust udf"
documentation = "https://github.com/yanhuangdata/gandiva_rust_udf_macros"
readme = "README.md"
homepage = "https://github.com/yanhuangdata/gandiva_rust_udf_macros"
repository = "https://github.com/yanhuangdata/gandiva_rust_udf_macros"
license-file = "LICENSE"

[dependencies]
lazy_static = { version = "1.4.0", features = [] }
serde_json = "1.0.111"
serde = { version = "1.0.64", features = ["derive"] }
libc = "0.2.152"
walkdir = "2.4.0"
syn = { version = "2.0.18", features = ["full", "visit", "visit-mut"] }
quote = "1.0.28"
proc-macro2 = "1.0.78"
toml = "0.8.10"
strfmt = "0.2.4"
gandiva_rust_udf_macro = { path = "../gandiva_rust_udf_macro" }
gandiva_rust_udf_type = { path = "../gandiva_rust_udf_type" }
gandiva_rust_udf_shared = { path = "../gandiva_rust_udf_shared" }
