[package]
name = "gandiva_rust_udf_common"
version = "0.1.0"
edition = "2021"
authors = ["yanhuangdata"]
description = "A basic library for gandiva rust udf macro"
documentation = "https://github.com/yanhuangdata/gandiva_rust_udf_macros"
readme = "README.md"
homepage = "https://github.com/yanhuangdata/gandiva_rust_udf_macros"
repository = "https://github.com/yanhuangdata/gandiva_rust_udf_macros"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

