[package]
name = "gandiva_rust_udf_macro"
version = "0.1.4"
edition = "2021"
authors = ["yanhuangdata"]
description = "A basic library for gandiva rust udf macro"
documentation = "https://github.com/yanhuangdata/gandiva_rust_udf_macros"
readme = "README.md"
homepage = "https://github.com/yanhuangdata/gandiva_rust_udf_macros"
repository = "https://github.com/yanhuangdata/gandiva_rust_udf_macros"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }
gandiva_rust_udf_common = "0.1.0"
gandiva_rust_udf_shared = "0.1.5"

[dev-dependencies]
default-args = "1.0.0"
